--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <li><a href="#sobremi" onclick="seleccionar(this)">SOBRE MI</a></li>
                             <li><a href="#servicios" onclick="seleccionar(this)">SERVICIOS</a></li>
                             <li><a href="#skills" onclick="seleccionar(this)">HABILIDADES</a></li>
-                            <li><a href="#portfolio" onclick="seleccionar(this)">PORTFOLIO</a></li>
+                            <li><a href="#portfolio" onclick="seleccionar(this)">PORTAFOLIO</a></li>
                             <li><a href="#contacto" onclick="seleccionar(this)">CONTACTO</a></li>
                         </ul>
                     </nav>
@@ -48,7 +48,7 @@
                 <p class="bienvenida">Bienvenidos</p>
                 <h2>Soy <span>Brandon De Alba </span>, Desarrollador Fullstack</h2>
                 <p class="descripcion">Desarrollador Fullstack especializado en Backend pero con concimientos Basicos de Frontend, 
-                    Manejo de lenguejes Variados Como lo son: Python, Javascript y PHP.Manejo de Frameworks 
+                    Manejo de lenguajes Variados Como lo son: Python, Javascript y PHP.Manejo de Frameworks 
                     mas famosos, Como lo son: Django para python, React, Reactnative y Angular para JS</p>
                 <a href="#portfolio">Ir a Portafolio</a>
             </div>
